<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GolfTrackerActivity!</string>
    <string name="app_name">GolfTracker</string>
    <string name="startLbl">Starta</string>
    <string name="welcomeLbl">Välkommen till GolfTracker GPS</string>
    <string name="exitLbl">Avsluta</string>
    <string name="otherDistances">Övriga avstånd</string>
    <string name="refreshLbl">Uppdatera</string>
    <string name="backLbl">Bakåt</string>
    <string name="waitLblDotted">Vänta...</string>
    <string name="frontGreenLbl">Framkant green</string>
    <string name="midGreenLbl">Mitten green</string>
    <string name="backGreenLbl">Bakkant green</string>
    <string name="holeLbl">Hål</string>
    <string name="parLbl">Par</string>
    <string name="hcpLbl">HCP</string>
    <string name="dashes">---</string>
    <string name="registerNewCourse">Registrera ny bana</string>
    <string name="selectCourseLbl">Välj klubb/bana</string>
    <string name="newCourseRegLbl">Registrera ny bana</string>
    <string name="nameLbl">Namn</string>
    <string name="numOfHolesLbl">Antal hål</string>
    <string name="continueLbl">Fortsätt</string>
    <string name="nineLbl">9</string>
    <string name="eighteenLbl">18</string>
    <string name="editingLbl">Redigerar</string>
    <string name="saveLbl">Spara</string>
    <string name="cancelLbl">Avbryt</string>
    <string name="settings">Inställningar</string>
    <string name="changeNameLbl">Ändra namn</string>
    
    <string-array name="num_of_holes_arr">
		<item>18</item>
		<item>9</item>
	</string-array>
	
	<string-array name="par_arr">
		<item>4</item>
		<item>3</item>
		<item>5</item>
		<item>6</item>
	</string-array>
		<string name="editCourse">Redigera bana</string>
		<string name="newPoiBtn">Registrera banpunkt</string>
		<string name="poiListLbl">Banpunkter</string>
		<string name="longLbl">Long</string>
		<string name="latLbl">Lat</string>
		<string name="typeOfPoiLbl">Välj typ av punkt</string>
		<string name="yellowTeeLbl">Gul tee</string>
		<string name="redTeeLbl">Röd tee</string>
		<string name="greenLbl">Green</string>
		<string name="bunkerLbl">Bunker</string>
		<string name="otherLbl">Annat</string>
		<string name="greenBunkerLbl">Greenbunker</string>
		<string name="fairwayBunkerLbl">Fairwaybunker</string>
		<string name="leftLbl">Vänster</string>
		<string name="rightLbl">Höger</string>
		<string name="frontLbl">Framför</string>
		<string name="mapLbl">Visa banguide</string>
		<string name="previousHoleLbl">Föreg. hål</string>
		<string name="nextHoleLbl">Nästa hål</string>
		
		<string name="showLineFromYelTeeToGreenLbl">Visa spellinje</string>
		<string name="showLineFromPlayerToGreenLbl">Visa spelarlinje</string>
		<string name="hideLineFromYelTeeToGreenLbl">Dölj spellinje</string>
		<string name="hideLineFromPlayerToGreenLbl">Dölj spelarlinje</string>
		
		<string name="distanceToMidGreen">Visa avstånd till green</string>
		<string name="distanceToMidGreenDesc">Avståndet i meter till green skrivs ut bredvid greenmarkören</string>
		<string name="distanceToGreenBunkers">Visa avstånd till greenbunkrar</string>
		<string name="distanceToGreenBunkersDesc">Avståndet i meter till greenbunkrar skrivs ut bredvid dessa markörer</string>		
		<string name="distanceToFwBunkers">Visa avstånd till fairwaybunkrar</string>
		<string name="distanceToFwBunkersDesc">Avståndet i meter till fairwaybunkrar skrivs ut bredvid dessa markörer</string>	
		
		
		<!-- Preferences -->
		<string name="preferences">Inställningar</string>
<string name="commonHeading">Allmänt</string>
<string name="mapsHeadingMarkers">Banguide - markörer</string>
<string name="mapsHeadingDistances">Banguide - avstånd</string>
<string name="testMode">Testläge</string>
<string name="testModeDesc">Använd lokal hårdkodad data</string>

<string name="serverHeading">Server</string>
<string name="serverUrl">Server-URL</string>
<string name="serverUrlDesc">Ange URL till kompetensdatabasens REST-API</string>
<string name="username">Användarnamn</string>
<string name="usernamnDesc">Användarnamn till kompetensdatabasen</string>
<string name="password">Lösenord</string>
<string name="passwordDesc">Lösenord till kompetensdatabasen</string>
<string name="testServerConnection">Testa serveranslutning</string>
<string name="testServerConnectionDesc">Klicka här för att testa serveranslutningen</string>
<string name="hasBeenAddedAsFavorite">har lagts till som favorit</string>
<string name="hasBeenRemovedFromFavorites">har tagits bort från favoriter</string>
<string name="openCvWith">Öppna CV med...</string>
<string name="productionMode">Produktionsläge</string>

<string name="teeToGreenLine">Visa spellinje</string>
<string name="teeToGreenLineDesc">En röd linje visas från tee till green</string>
<string name="playerToGreenLine">Visa spelarlinje</string>
<string name="playerToGreenLineDesc">En blå linje visas från spelarens position till green</string>

<string name="frontBackGreenMarkers">Visa Framkant/Bakkant green</string>
<string name="frontBackGreenMarkersDesc">Visa markeringar för framkant och bakkant green på kartan</string>
<string name="fwBunkerMarkers">Visa fairwaybunkrar</string>
<string name="fwBunkerMarkersDesc">Visa orange markeringar för fairwaybunkrar på kartan</string>
<string name="greenBunkerMarkers">Visa greenbunkrar</string>
<string name="greenBunkerMarkersDesc">Visa orange markeringar för greenbunkrar på kartan</string>
<string name="useMapLbl">Karta</string>
<string name="centerMapAboveCourse">Centrera kartan över golfbanan</string>
<string name="doneLbl">Klar</string>

<string name="dumpDbCsv">Säkerhetskopiera databasen</string>
<string name="dumpDbCsvDesc">Skriver databasen till SD-kortet i CSV-format</string>

<string name="readDbCsv">Återställ databas</string>
<string name="readDbCsvDesc">Läser upp säkerhetskopierad databas från SD-kortet.</string>
<string name="syncDb">Synkronisera databas mot server</string>
<string name="syncDbDesc">Läser äver dina ändringar till servern och hämtar uppdateringar</string>
<string name="syncWithDbLbl">Synkroniserar mot server</string>
<string name="backingUpLbl">Genomför databasbackup</string>
<string name="registerUserAccountLbl">Registrera användare</string>
<string name="userName">Användarnamn</string>
<string name="registerBtn">Registrera</string>
<string name="measureShotLbl">Registrera slag</string>
<string name="registerShotLbl">Registrera slag</string>
<string name="lengthLbl">Längd</string>
<string name="clubLbl">Klubba</string>
<string name="measureShotBtn">Mät slag</string>
<string name="ballTrajectoryLbl">Bollbana</string>
<string name="teesLbl">Tees</string>
<string name="addLbl">Lägg till</string>
<string name="teeLbl">Tee</string>
<string name="deleteLbl">Ta bort</string>
<string name="scoreLbl">Resultat</string>
<string name="puttsLbl">Antal puttar</string>
<string name="nextLbl">Nästa</string>
<string name="enterScoreLbl">Ange resultat</string>
<string name="fairwayLblShort">FW</string>
<string name="sandLbl">Bunker</string>
<string name="penaltyLbl">Plikt</string>
<string name="playLbl">Spela</string>
<string name="coursesLbl">Banor</string>
<string name="selectTeeLbl">Välj tee</string>

</resources>
