<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:background="@drawable/background_01p">
	<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
		android:layout_marginTop="15dp" android:layout_alignParentRight="true"
		android:text="@string/newCourseRegLbl"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_below="@+id/textView1" android:layout_alignParentLeft="true"
		android:layout_marginTop="22dp" android:text="@string/nameLbl"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_below="@+id/textView2"
		android:layout_alignParentLeft="true" android:layout_alignParentRight="true"
		android:id="@+id/courseNameFld">
		<requestFocus></requestFocus>
	</EditText>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_below="@+id/courseNameFld"
		android:layout_alignParentLeft="true" android:layout_marginTop="15dp"
		android:text="@string/numOfHolesLbl"></TextView>
	<Spinner android:layout_width="wrap_content" android:id="@+id/numOfHolesFld"
		android:layout_height="wrap_content" android:layout_below="@+id/textView3"
		android:layout_alignParentLeft="true" android:layout_alignParentRight="true"
		android:entries="@array/num_of_holes_arr"></Spinner>

	<Button android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true" android:text="@string/continueLbl"
		android:id="@+id/continueNewCourseBtn"></Button>
	<TextView android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/numOfHolesFld" android:layout_alignParentLeft="true" android:layout_marginTop="18dp" android:text="@string/teesLbl"></TextView>
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/textView4" android:layout_alignParentRight="true" android:text="@string/addLbl" android:id="@+id/addTeeBtn"></Button>
	<Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@+id/addTeeBtn" android:layout_alignParentLeft="true" android:id="@+id/teesSpinner" android:layout_toLeftOf="@+id/addTeeBtn"></Spinner>
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button1" android:layout_below="@+id/teesSpinner" android:layout_alignParentRight="true" android:text="@string/deleteLbl" android:layout_toRightOf="@+id/teesSpinner"></Button>

</RelativeLayout>
