<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/LinearLayout1"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/background_01p">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/top_control_bar">
	</RelativeLayout>
	<Button android:id="@+id/editHoleBackButton1"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:text="" android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true" android:background="@drawable/ic_menu_back"></Button>
	<Button android:id="@+id/editHoleForwardButton1"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:text="" android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true" android:background="@drawable/ic_menu_forward"></Button>
	<Button android:id="@+id/editHoleSaveBtn1"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true" android:text="@string/saveLbl"></Button>
	<Spinner android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignTop="@+id/editHoleParFld"
		android:layout_alignParentRight="true" android:id="@+id/editHoleHcpFld"></Spinner>
	<Spinner android:layout_width="wrap_content" android:id="@+id/editHoleParFld"
		android:layout_height="wrap_content" android:layout_below="@+id/editHoleParLbl"
		android:layout_centerHorizontal="true" android:entries="@array/par_arr"></Spinner>
	<TextView android:layout_height="wrap_content" android:id="@+id/editHoleParLbl"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/parLbl" android:layout_above="@+id/editHoleHoleVal"
		android:layout_centerHorizontal="true"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/editHoleHcpLbl"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/hcpLbl" android:layout_above="@+id/editHoleHcpFld"
		android:layout_alignLeft="@+id/editHoleHcpFld"
		android:layout_marginLeft="18dp"></TextView>

	<TextView android:layout_height="wrap_content" android:id="@+id/editHoleHoleVal"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/dashes" android:textSize="18pt"
		android:textStyle="bold" android:layout_below="@+id/editHoleNumberLbl"
		android:layout_alignLeft="@+id/editHoleNumberLbl" android:gravity="center_horizontal|top"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/editHoleNumberLbl"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/holeLbl" android:layout_below="@+id/top_control_bar"
		android:layout_alignRight="@+id/editHoleBackButton1"
		android:layout_marginTop="14dp"></TextView>
	<Button android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_above="@+id/editHoleSaveBtn1" android:layout_alignLeft="@+id/editHoleHoleVal"
		android:text="@string/newPoiBtn" android:id="@+id/editHoleNewPoiBtn"></Button>
	<ListView android:id="@android:id/list" android:layout_height="wrap_content" android:cacheColorHint="#00000000"
		android:layout_width="match_parent" android:layout_below="@+id/textView1" 
		android:layout_alignParentRight="true" android:layout_alignParentLeft="true" android:background="@drawable/background_01p" android:layout_above="@+id/editHoleNewPoiBtn"></ListView>
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@+id/editHoleForwardButton1" android:text="@string/useMapLbl" android:layout_toRightOf="@+id/editHoleNewPoiBtn" android:layout_alignRight="@+id/editHoleHcpLbl" android:id="@+id/showMapBtn2"></Button>
	<TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/poiListLbl" android:layout_below="@+id/editHoleHoleVal" android:layout_alignLeft="@+id/editHoleHoleVal"></TextView>
</RelativeLayout>